# AIdebate

./: .gitignore  IMDb_DistilBERT_LoRA_FineTuning_Colab.ipynb  README.md  pyproject.toml  requirements.txt  run.ps1
artifacts/: graph
my_merged_model/content/my_merged_model/: config.json
src/: diagram.py  graph.py  llm.py  logging_utils.py  main.py  mock_llm.py  nodes.py  state.py  validators.py
src/atg/: cli.py  config.py  logging_setup.py
src/atg/graph/: flow.py
src/atg/nodes/: confidence.py  fallback.py  inference.py  reject.py
src/atg/utils/: offline_loader.py
