[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atg-self-healing-dag"
version = "0.1.0"
description = "Self-Healing Classification DAG with DistilBERT and LangGraph"
authors = [
  { name = "ATG Candidate" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "transformers>=4.43.0",
  "torch>=2.1.0",
  "accelerate>=0.33.0",
  "datasets>=2.19.0",
  "huggingface_hub>=0.23.0",
  "langgraph>=0.2.21",
  "langchain>=0.3.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "networkx>=3.2.1",
  "graphviz>=0.20.3",
  "scikit-learn>=1.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.ruff]
select = ["E", "F", "I", "UP", "B", "SIM"]
line-length = 99

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
strict = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
